swag updated
