# internal/rest/http.go
@@ -19,6 +19,10 @@ type service interface {
 	GetInfo() (string, error)
 	GetAnswersList() ([]models.ResponseQuestion, error)
 	CheckAnswer([]models.UserAnswer) ([]models.CheckResult, error)
+	GetQuest() (models.Quest, error)
+	GetThemas() ([]models.Thema, error)
+	GetThemaFullInfo(code string) (models.ThemaFullInfo, error)
+	GetQuestionsList(code string) []models.Question
 }
 
 type Server struct {
@@ -63,9 +67,13 @@ func (s *Server) Run(ctx context.Context) error {
 	// маршрут.
 	router.GET("/text", s.GetText)
 	router.GET("/answers", s.GetAnswers)
-	router.GET("/check/:answerCode/:respCode", s.Check)
+	router.GET("/thema/check/:code/questions", s.Check)
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	router.POST("/check", s.Check)
+	router.GET("/quest", s.GetQuest)
+	router.GET("/themas", s.GetThemas)
+	router.GET("/thema/:code", s.GetThemaFullInfo)
+	router.GET("/thema/:code/questions", s.GetQuestionsList)
 
 	s.server = &http.Server{
 		Addr:              fmt.Sprintf("%s:%s", s.host, s.port),
