# internal/swagger/docs/swagger.yaml
@@ -7,6 +7,59 @@ definitions:
       name:
         type: string
     type: object
+  models.AnswerVariant:
+    properties:
+      code:
+        type: string
+      isRight:
+        type: boolean
+      name:
+        type: string
+    type: object
+  models.CheckResult:
+    properties:
+      isCorrect:
+        type: boolean
+      questionCode:
+        type: string
+      rightAnswerCode:
+        items:
+          type: string
+        type: array
+      userAnswerCode:
+        items:
+          type: string
+        type: array
+    type: object
+  models.NoiseSource:
+    properties:
+      code:
+        type: string
+      name:
+        type: string
+    type: object
+  models.Quest:
+    properties:
+      code:
+        type: string
+      imagePNG:
+        type: string
+      noise:
+        items:
+          $ref: '#/definitions/models.NoiseSource'
+        type: array
+    type: object
+  models.Question:
+    properties:
+      answers:
+        items:
+          $ref: '#/definitions/models.AnswerVariant'
+        type: array
+      code:
+        type: string
+      name:
+        type: string
+    type: object
   models.ResponseQuestion:
     properties:
       answers:
@@ -17,6 +70,25 @@ definitions:
         type: string
       name:
         type: string
+    type: object
+  models.StatusThema:
+    enum:
+    - open
+    - current
+    - completed
+    type: string
+    x-enum-varnames:
+    - StatusThemaOpen
+    - StatusThemaCurrent
+    - StatusThemaCompleted
+  models.Thema:
+    properties:
+      code:
+        type: string
+      name:
+        type: string
+      status:
+        $ref: '#/definitions/models.StatusThema'
     type: object
   models.UserAnswer:
     properties:
@@ -63,7 +135,7 @@ paths:
       consumes:
       - application/json
       description: Принимает список выбранных пользователем ответов (questionCode
-        + answerCode) и возвращает количество правильных ответов.
+        + answerCodes) и возвращает результат проверки
       parameters:
       - description: Ответы пользователя
         in: body
@@ -77,13 +149,19 @@ paths:
       - application/json
       responses:
         "200":
-          description: 'result" "Correct answers: X/Y'
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.CheckResult'
+            type: array
+        "400":
+          description: Ошибка запроса
           schema:
             additionalProperties:
               type: string
             type: object
-        "400":
-          description: error" "Invalid request
+        "500":
+          description: Внутренняя ошибка
           schema:
             additionalProperties:
               type: string
@@ -91,6 +169,84 @@ paths:
       summary: Проверка ответов пользователя
       tags:
       - тесты
+  /quest:
+    get:
+      description: Возвращает случайно выбранный вопрос из базы
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Quest'
+      summary: Случайный вопрос
+      tags:
+      - тесты
+  /thema/{code}:
+    get:
+      description: Возвращает текстовый блок (InfoBlock) по теме
+      parameters:
+      - description: Код темы
+        in: path
+        name: code
+        required: true
+        type: string
+      produces:
+      - text/plain
+      responses:
+        "200":
+          description: Текст темы
+          schema:
+            type: string
+        "404":
+          description: Тема не найдена
+          schema:
+            type: string
+      summary: Полная информация о теме
+      tags:
+      - темы
+  /thema/{code}/questions:
+    get:
+      description: Возвращает список вопросов для указанной темы без вариантов ответов
+      parameters:
+      - description: Код темы
+        in: path
+        name: code
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Question'
+            type: array
+        "404":
+          description: Вопросы для темы не найдены
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Список вопросов по теме
+      tags:
+      - тесты
+  /themas:
+    get:
+      description: Возвращает краткую информацию по всем темам курса
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Thema'
+            type: array
+      summary: Список тем
+      tags:
+      - темы
 schemes:
 - http
 swagger: "2.0"
